dotnet/versioned_docs/version-1.18/api/class-tracing.mdx
---
id: class-tracing
title: "Tracing"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

API for collecting and saving Playwright traces. Playwright traces can be opened in [Trace Viewer](./trace-viewer.mdx) after Playwright script runs.

Start recording a trace before performing actions. At the end, stop tracing and save it to a file.

```csharp
await using var browser = playwright.Chromium.LaunchAsync();
await using var context = await browser.NewContextAsync();
await context.Tracing.StartAsync(new TracingStartOptions
{
  Screenshots: true,
  Snapshots: true
});
var page = context.NewPageAsync();
await page.GotoAsync("https://playwright.dev");
await context.Tracing.StopAsync(new TracingStopOptions
{
  Path: "trace.zip"
});
```


- [Tracing.StartAsync(options)](./api/class-tracing.mdx#tracing-start)
- [Tracing.StartChunkAsync(options)](./api/class-tracing.mdx#tracing-start-chunk)
- [Tracing.StopAsync(options)](./api/class-tracing.mdx#tracing-stop)
- [Tracing.StopChunkAsync(options)](./api/class-tracing.mdx#tracing-stop-chunk)

## Tracing.StartAsync(options) {#tracing-start}
- `options` &#60;`TracingStartOptions?`&#62;
  - `Name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-name"/> &#60;[string]?&#62; If specified, the trace is going to be saved into the file with the given name inside the `tracesDir` folder specified in [BrowserType.LaunchAsync(options)](./api/class-browsertype.mdx#browser-type-launch).<a href="#tracing-start-option-name" class="list-anchor">#</a>
  - `Screenshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-screenshots"/> &#60;[bool]?&#62; Whether to capture screenshots during tracing. Screenshots are used to build a timeline preview.<a href="#tracing-start-option-screenshots" class="list-anchor">#</a>
  - `Snapshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-snapshots"/> &#60;[bool]?&#62; Whether to capture DOM snapshot on every action.<a href="#tracing-start-option-snapshots" class="list-anchor">#</a>
  - `Sources`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-sources"/> &#60;[bool]?&#62; Whether to include source files for trace actions.<a href="#tracing-start-option-sources" class="list-anchor">#</a>
  - `Title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-title"/> &#60;[string]?&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-return"/> &#60;[void]&#62;<a href="#tracing-start-return" class="list-anchor">#</a>

Start tracing.

```csharp
await using var browser = playwright.Chromium.LaunchAsync();
await using var context = await browser.NewContextAsync();
await context.Tracing.StartAsync(new TracingStartOptions
{
  Screenshots: true,
  Snapshots: true
});
var page = context.NewPageAsync();
await page.GotoAsync("https://playwright.dev");
await context.Tracing.StopAsync(new TracingStopOptions
{
  Path: "trace.zip"
});
```

## Tracing.StartChunkAsync(options) {#tracing-start-chunk}
- `options` &#60;`TracingStartChunkOptions?`&#62;
  - `Title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-option-title"/> &#60;[string]?&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-chunk-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-return"/> &#60;[void]&#62;<a href="#tracing-start-chunk-return" class="list-anchor">#</a>

Start a new trace chunk. If you'd like to record multiple traces on the same [BrowserContext], use [Tracing.StartAsync(options)](./api/class-tracing.mdx#tracing-start) once, and then create multiple trace chunks with [Tracing.StartChunkAsync(options)](./api/class-tracing.mdx#tracing-start-chunk) and [Tracing.StopChunkAsync(options)](./api/class-tracing.mdx#tracing-stop-chunk).

```csharp
await using var browser = playwright.Chromium.LaunchAsync();
await using var context = await browser.NewContextAsync();
await context.Tracing.StartAsync(new TracingStartOptions
{
  Screenshots: true,
  Snapshots: true
});
var page = context.NewPageAsync();
await page.GotoAsync("https://playwright.dev");

await context.Tracing.StartChunkAsync();
await page.ClickAsync("text=Get Started");
// Everything between StartChunkAsync and StopChunkAsync will be recorded in the trace.
await context.Tracing.StopChunkAsync(new TracingStopChunkOptions
{
  Path: "trace1.zip"
});

await context.Tracing.StartChunkAsync();
await page.GotoAsync("http://example.com");
// Save a second trace file with different actions.
await context.Tracing.StopChunkAsync(new TracingStopChunkOptions
{
  Path: "trace2.zip"
});
```

## Tracing.StopAsync(options) {#tracing-stop}
- `options` &#60;`TracingStopOptions?`&#62;
  - `Path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-option-path"/> &#60;[string]?&#62; Export trace into the file with the given path.<a href="#tracing-stop-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-return"/> &#60;[void]&#62;<a href="#tracing-stop-return" class="list-anchor">#</a>

Stop tracing.

## Tracing.StopChunkAsync(options) {#tracing-stop-chunk}
- `options` &#60;`TracingStopChunkOptions?`&#62;
  - `Path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-option-path"/> &#60;[string]?&#62; Export trace collected since the last [Tracing.StartChunkAsync(options)](./api/class-tracing.mdx#tracing-start-chunk) call into the file with the given path.<a href="#tracing-stop-chunk-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-return"/> &#60;[void]&#62;<a href="#tracing-stop-chunk-return" class="list-anchor">#</a>

Stop the trace chunk. See [Tracing.StartChunkAsync(options)](./api/class-tracing.mdx#tracing-start-chunk) for more details about multiple trace chunks.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[bool]: https://docs.microsoft.com/en-us/dotnet/api/system.boolean "bool"
[double]: https://docs.microsoft.com/en-us/dotnet/api/system.double "double"
[byte]: https://docs.microsoft.com/en-us/dotnet/api/system.byte "byte"
[int]: https://docs.microsoft.com/en-us/dotnet/api/system.int32 "int"
[void]: https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/void "void"
[string]: https://docs.microsoft.com/en-us/dotnet/api/system.string "string"
[URL]: https://nodejs.org/api/url.html "URL"
[Regex]: https://docs.microsoft.com/en-us/dotnet/api/system.text.regularexpressions.regex "Regex"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable "IEnumerable"
[IDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.idictionary "IDictionary"
[Task]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task?view=net-5.0 "Task"
[IReadOnlyDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ireadonlydictionary-2 "IReadOnlyDictionary"
[JsonElement]: https://docs.microsoft.com/en-us/dotnet/api/system.text.json.jsonelement "JsonElement"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
